After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 670085 - memory leak in g_output_stream_write_async
memory leak in g_output_stream_write_async
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gio
2.31.x
Other All
: Normal minor
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2012-02-14 16:33 UTC by Ravi Sankar Guntur
Modified: 2012-02-16 15:20 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix memory leak in g_buffered_output_stream_write_async (1.20 KB, patch)
2012-02-14 16:37 UTC, Ravi Sankar Guntur
accepted-commit_now Details | Review

Description Ravi Sankar Guntur 2012-02-14 16:33:55 UTC
==3963== 4,936 (208 direct, 4,728 indirect) bytes in 4 blocks are definitely lost in loss record 735 of 737
==3963==    at 0x4028876: malloc (vg_replace_malloc.c:236)
==3963==    by 0x407C64A: standard_malloc (gmem.c:85)
==3963==    by 0x407C9F2: g_malloc (gmem.c:159)
==3963==    by 0x40908ED: g_slice_alloc (gslice.c:1003)
==3963==    by 0x4090E55: g_slice_alloc0 (gslice.c:1029)
==3963==    by 0x417DD87: g_type_create_instance (gtype.c:1872)
==3963==    by 0x4160807: g_object_constructor (gobject.c:1839)
==3963==    by 0x4162560: g_object_newv (gobject.c:1622)
==3963==    by 0x4162AF7: g_object_new (gobject.c:1532)
==3963==    by 0x4205EDC: g_simple_async_result_new (gsimpleasyncresult.c:318)
==3963==    by 0x41C43B3: g_buffered_output_stream_write_async (gbufferedoutputstream.c:617)
==3963==    by 0x41FF28A: g_output_stream_write_async (goutputstream.c:771)
Comment 1 Ravi Sankar Guntur 2012-02-14 16:37:54 UTC
Created attachment 207536 [details] [review]
fix memory leak in g_buffered_output_stream_write_async

please review.
Comment 2 Allison Karlitskaya (desrt) 2012-02-14 19:33:37 UTC
Review of attachment 207536 [details] [review]:

Looks good.  Thanks for the catch.
Comment 3 André Klapper 2012-02-15 09:42:29 UTC
Ravi: Do you have git commit access?
Comment 4 Ravi Sankar Guntur 2012-02-15 10:00:11 UTC
@ André: nope.
Comment 5 Colin Walters 2012-02-16 15:20:42 UTC
I've pushed it.  Thanks for the patch, Ravi!