gio: fix memory leak in g_buffered_output_stream_write_async()

https://bugzilla.gnome.org/show_bug.cgi?id=670085

Signed-off-by: Ravi Sankar Guntur <ravi.g@samsung.com>